dashboard/ingress/dashboard-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: dashboard-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-basicauth@kubernetescrd
        
spec:
  rules:
    - host: dashboard.sillycat.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: kubernetes-dashboard
              servicePort: 9090
